# maestro-pyscf-benchmark

./: README.md  pyproject.toml
benchmarks/: benchmarks.py  n2_diss.py
benchmarks/geometries/: fe2s2_cluster.xyz  fe_porphine.xyz
docs/: API_REFERENCE.md  OVERVIEW.md
examples/: 01_h2_dissociation.py  02_lih_uccsd.py  03_gpu_vs_cpu.py  04_mps_bond_dimension.py  05_casscf_orbital_opt.py  05_statevector_vs_mps.py  06_casscf_orbital_opt.py  06_nevpt2.py  07_dipole_moment.py  07_nevpt2.py  08_dipole_moment.py  08_geometry_opt.py  09_geometry_opt.py  10_full_workflow.py  10_gpu_benchmark.py  12_custom_qcc.py  13_iterative_qcc_fidelity.py  README.md
examples/full_workflow/: README.md  _gen_notebook.py  full_workflow.ipynb  full_workflow.py
examples/n2_dissociation/: README.md  plot_results.py  run_pes_scan.py
examples/n2_dissociation/results/: n2_sto-3g_cas6.json
qoro_maestro_pyscf/: __init__.py  ansatze.py  backends.py  expectation.py  hamiltonian.py  maestro_solver.py  properties.py  rdm.py
tests/: __init__.py  test_integration.py  test_qoro_maestro_pyscf.py  test_solver.py
